2013-12-03	Stephan Linz <linz@li-pro.net>

	* common: dbus: (re-)enable default rule for 1.6.4

2013-12-02	Stephan Linz <linz@li-pro.net>

	* common: HOWTO: add reference note to the right GNU toolchain

2013-11-30	Stephan Linz <linz@li-pro.net>

	* ptxconfig: host-xl-tools: version bump 1.1.0 -> 1.1.1

2013-11-29	Stephan Linz <linz@li-pro.net>

	* common: adapt latest patch sets to linux-3.6
	* common: adapt latest patch sets to u-boot-2013.04
	* ptxconfig: upgarde to gdb-7.4.1 (native debugging)
	* ptxconfig: fix to busybox-1.20.1 (include sys/resource.h)
	* common: HOWTO: add reference note to the right GNU toolchain
	* ptxconfig: add bc and busybox dc for the target

2013-11-28	Stephan Linz <linz@li-pro.net>

	* common: HOWTO: remove documentation for S2I-ML505-MMU-gige-11.5

2012-12-22	Stephan Linz <linz@li-pro.net>

	* common: adapt latest patch sets to linux-3.6

2012-12-14	Stephan Linz <linz@li-pro.net>

	* common: adapt latest patch sets to linux-3.6

2012-12-12	Stephan Linz <linz@li-pro.net>

	* common: adapt latest patch sets to linux-3.6
	* common: adapt latest patch sets to u-boot-2012.10

2012-10-19	Stephan Linz <linz@li-pro.net>

	* ptxconfig: busybox: disable Unix98 PTYs
	* ptxconfig: add write support for ftpd (put)
	* ptxconfig: add ldd for the target

2012-10-14	Stephan Linz <linz@li-pro.net>

	* ptxconfig: migrate to ptxdist-2012.10.0
	* ptxconfig: upgarde to busybox-1.20.1
	* common: dbus: make epoll configurable

2012-08-01	Stephan Linz <linz@li-pro.net>

	* common: HOWTO: add kernel shortcut for Avnet-S6LX9-AXI-tiny-13.2

2012-07-31	Stephan Linz <linz@li-pro.net>

	* common: adapt latest patch sets to u-boot-2012.07

2012-07-29	Stephan Linz <linz@li-pro.net>

	* common: adapt latest patch sets to linux-3.3
	* common: adapt latest patch sets to u-boot-2012.07-rc3
	* common: HOWTO: add XLBLOB shortcut for Avnet-S6LX9-AXI-tiny-13.2

2012-06-26	Stephan Linz <linz@li-pro.net>

	* common: improve build_all.mk make script